# CaliforniaHousing

./: pyproject.toml
code/: main-alireza.ipynb  main-mhdi.ipynb
config/: hyperparameters.yaml
