[project]
name = "californiahousing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "wandb>=0.24.1",
]
